Add JavaFX and associated build tools